test/corpus/fail/M0176.mo
=========
M0176.mo
=========

from_candid (to_candid (1))

---

(source_file
  (exp_dec
    (from_candid_exp
      (par_exp
        (to_candid_exp
          (lit_exp
            (int_literal)))))))
